--- a/app/views/layouts/_header.html+mobile.haml
+++ b/app/views/layouts/_header.html+mobile.haml
@@ -6,7 +6,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to t('application.header.home'), root_path, class: 'navbar-brand'
+      = link_to 'SKY DERBY', root_path, class: 'navbar-brand'
 
     .navbar-collapse.collapse
       %ul.nav.navbar-nav.text-center
@@ -20,56 +20,5 @@
         - if !user_signed_in?
           %li.navbar__link
             = link_to t('application.header.sign_in'), new_user_session_path
-           
-      %ul.nav.navbar-nav.navbar-right
 
-        -# - if user_signed_in?
-        -#   %li.dropdown
-        -#     %a.dropdown-toggle.profile-dropdown{href: '#', data: {toggle: 'dropdown'}}
-        -#       - if masquerading?
-        -#         %i.fa.fa-lg.fa-warning.text-danger
-        -#       - if current_user.profile
-        -#         = image_tag current_user.profile.userpic.url(:thumb), id: 'userpic-thumb', class: 'img-rounded img-50 loading-bg'
-        -#       - else
-        -#         = current_user.email
-        -#         = image_tag '/images/thumb/missing.png', id: 'userpic-thumb', class: 'img-rounded img-50 loading-bg'
-        -#
-        -#     %ul.dropdown-menu
-        -#       - if current_user.has_role? :admin
-        -#         %li
-        -#           = link_to t('application.header.admin_panel'), manage_path
-        -#       - if masquerading?
-        -#         %li
-        -#           = link_to 'Stop masquerading', user_masquerades_path(current_user), method: :delete
-        -#       %li
-        -#         = link_to t('application.header.profile'), profile_path(current_user.profile)
-        -#       %li
-        -#         = link_to t('application.header.sign_out'), destroy_user_session_path, method: :delete
-        -# - else
-        -#   %li.dropdown
-        -#     %a.dropdown-toggle{href: '#', data: {toggle: 'dropdown'}}
-        -#       =t 'application.header.sign_in'
-        -#       %i.fa.fa-caret-down'
-        -#     %ul.dropdown-menu.login-menu
-        -#       %li
-        -#         .row
-        -#           .col-md-12
-        -#             = form_for(:user, url: session_path(:user), html: {class: 'form sign-in-form', role: 'form'}) do |f|
-        -#               .form-group
-        -#                 = label_tag 'user_email', 'Email address', for: 'user_email', class: 'sr-only'
-        -#                 = f.text_field :email, class: 'form-control', type: 'email', placeholder: t('application.header.login_email')
-        -#               .form-group
-        -#                 = label_tag 'user_password', 'Password', for: 'user_password', class: 'sr-only'
-        -#                 = f.password_field :password, class: 'form-control', placeholder: t('application.header.password')
-        -#               .checkbox
-        -#                 %label
-        -#                   = f.check_box :remember_me, checked: true
-        -#                   =t('application.header.remember_me')
-        -#               .form-group
-        -#                 = f.submit t('application.header.sign_in'), class: 'btn btn-success btn-block'
-        -#             = link_to t('application.header.forgot_pass'), new_password_path(:user)
-        -#           %hr
-        -#           .col-sm-12.hidden-md
-        -#             = link_to t('application.header.sign_up'), new_user_registration_path
-        -#   %li.hidden-sm.sign-in
-        -#     = link_to t('application.header.sign_up'), new_user_registration_path
+      %ul.nav.navbar-nav.navbar-right
