--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,7 +6,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to t('application.header.home'), root_path, class: 'navbar-brand'
+      = link_to 'SKY DERBY', root_path, class: 'navbar-brand'
 
     .navbar-collapse.collapse#skyderby-navbar-collapse
       %ul.nav.navbar-nav
