--- a/app/views/static_pages/_index_header.html.haml
+++ b/app/views/static_pages/_index_header.html.haml
@@ -2,7 +2,7 @@
   .container
     .navbar-header
       = link_to root_path, class: 'navbar-brand' do
-        = t('application.header.home') 
+        SKY DERBY
         %sup
           β
 
@@ -16,7 +16,7 @@
         = link_to t('application.header.online_competitions'), virtual_competitions_path 
       %li{class: ('nav-active' if root_controller == 'places')}
         = link_to t('application.header.places'), places_path
-         
+
     %ul.nav.navbar-nav.navbar-right
 
       - if user_signed_in?
