--- a/app/assets/stylesheets/blocks/_button_tabs.scss
+++ b/app/assets/stylesheets/blocks/_button_tabs.scss
@@ -12,7 +12,7 @@
   white-space: nowrap;
   padding: 6px 12px;
   font-size: 14px;
-  border-radius: 2px;
+  line-height: 1.45;
 
   &.same-padding {
     padding: 6px;
@@ -20,7 +20,14 @@
 
   &:hover {
     color: rgb(17, 17, 17);
+    background-color: #f2f2f2;
     text-decoration: none;
+    border-radius: 6px;
+  }
+
+  &.active {
+    background-color: #ddd;
+    border-radius: 6px;
   }
 }
 
@@ -30,5 +37,9 @@
   border-top: #0084b4 solid 3px;
   border-left: rgba(0, 0, 0, 0.14) solid 1px;
   border-right: rgba(0, 0, 0, 0.14) solid 1px;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
   background-color: #fff;
 }
