--- a/app/views/tracks/_show_track.html.haml
+++ b/app/views/tracks/_show_track.html.haml
@@ -1,10 +1,14 @@
 .track-show
-    
+
   .container
     = render partial: 'header', locals: {track: @track}
 
     .content-block.content-block--bordered
       .card-action
+        = link_to show_params.merge('straight-line': !straight_line_distance),
+                  remote: true,
+                  class: ['btn-flat toggle-straight-line', ('active' if straight_line_distance)] do
+          Straight-line distance
         .dropdown.position-right.settings-button
           = render 'tracks/view_settings_menu', presenter: @track_presenter
 
@@ -20,12 +24,12 @@
               %i.fa.fa-arrows-h
           #slider-range-selector
             %input#range-selector{type: "text",
-                                  name: 'range', 
-                                  data: {remote: 'true', url: url_for},
+                                  name: 'range',
+                                  data: { remote: 'true', url: url_for },
                                   value: "#{@track_presenter.range_from};#{@track_presenter.range_to}"}
 
       = render 'tracks/charts', presenter: @track_presenter
-    
+
     %blockquote
       = render 'track_metadata' 
 
