Make delete result behavior clear

--- a/app/assets/stylesheets/blocks/_button_tabs.scss
+++ b/app/assets/stylesheets/blocks/_button_tabs.scss
@@ -31,6 +31,12 @@
   }
 }
 
+.btn-flat.btn-flat--danger {
+  font-weight: 600;
+  color: rgba(208, 74, 74, 0.78);
+  letter-spacing: 0.3px;
+}
+
 .btn-tab.active {
   margin-bottom: -1px;
   color: rgb(17, 17, 17);
