improve mobile layout

--- a/app/assets/stylesheets/mobile/_main_menu.scss
+++ b/app/assets/stylesheets/mobile/_main_menu.scss
@@ -51,7 +51,7 @@
 
 .main-menu__bar-actions {
   width: 110px;
-  margin-right: 20px;
+  margin: 0 20px 0 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
