--- a/app/assets/stylesheets/mobile/pages/tracks/_tracks_index.scss
+++ b/app/assets/stylesheets/mobile/pages/tracks/_tracks_index.scss
@@ -1,6 +1,6 @@
 .tracks-index {
-  padding-left: 5px;
-  padding-right: 5px;
+  margin-top: 70px;
+  padding: 5px;
 }
 
 .tracks-index__table-container {
