--- a/app/assets/stylesheets/mobile/application.scss
+++ b/app/assets/stylesheets/mobile/application.scss
@@ -4,24 +4,24 @@
  *= require select2-bootstrap
 */
 
-// @import 'bootstrap_variables_overrides';
-// @import "bootstrap-sprockets";
-// @import "bootstrap";
+@import 'bootstrap_variables_overrides';
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
 @import '../variables';
 @import '../common/**/*';
-// @import '../blocks/**/*';
+@import '../blocks/**/*';
 
 @import 'variables';
 @import '**/*';
 
 * {
-	padding: 0;
-	margin: 0;
-	outline: none;
+  padding: 0;
+  margin: 0;
+  outline: none;
 }
 
 html, body {
@@ -33,9 +33,9 @@ html, body {
 }
 
 body {
-	color: $main-text-color;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	background: #f8f8f8;
-	-webkit-font-smoothing: antialiased;
+  color: $main-text-color;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background: #f8f8f8;
+  -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
 }
