--- a/app/assets/stylesheets/mobile/pages/_online_competition.scss
+++ b/app/assets/stylesheets/mobile/pages/_online_competition.scss
@@ -1,3 +1,8 @@
+.online-competition {
+  margin-top: 70px;
+  padding-top: 5px;
+}
+
 .online-competition__header {
   font-size: 24px;
   line-height: 1.45;
