--- a/app/assets/stylesheets/mobile/pages/_online_competitions_index.scss
+++ b/app/assets/stylesheets/mobile/pages/_online_competitions_index.scss
@@ -1,10 +1,9 @@
 .online-competitions-index {
-  margin-top: 15px;
-  padding-left: 5px;
-  padding-right: 5px;
+  margin-top: 70px;
+  padding: 20px;
 }
 
 .online-competition-row {
-  color: #333333;
+  color: #333;
   text-decoration: none;
 }
