--- a/app/assets/stylesheets/variables/_app_icons.scss
+++ b/app/assets/stylesheets/variables/_app_icons.scss
@@ -13,3 +13,4 @@ $icon-notification: '\e90b';
 $icon-logout:       '\e922';
 $icon-remove:       '\e911';
 $icon-track:        '\e907';
+$icon-wingsuit:     '\e909';
