--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -1,4 +1,4 @@
-%li.comp-list-item{class: ('active' if event.starts_at < Time.now && !event.finished?) }
+%li.comp-list-item{class: ('active' if event.active?) }
   .comp-list-params
     .comp-rules
       = 'Rules: '
