--- a/app/assets/stylesheets/mobile/_main_menu.scss
+++ b/app/assets/stylesheets/mobile/_main_menu.scss
@@ -29,6 +29,7 @@
   align-items: center;
   text-decoration: none;
   margin-right: 40px;
+  min-width: 150px;
 
   img {
     width: 40px;
@@ -104,6 +105,19 @@
     align-items: center;
     position: relative;
     padding-right: 0;
+  }
+}
+
+.main-menu--login {
+  margin-top: 50px;
+  border-bottom: none;
+  text-align: center;
+
+  a {
+    display: inline;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-radius: 2px;
   }
 }
 
