--- a/app/views/layouts/_footer.html+mobile.haml
+++ b/app/views/layouts/_footer.html+mobile.haml
@@ -2,5 +2,5 @@
   %p= "© 2014-#{Time.now.year} SKYDERBY"
   %p
     = t('application.footer.made_with')
-    %i.fa.fa-heart
+    %i.fa.fa-heart.text-light-red
     Skyderby Team
