--- a/app/assets/stylesheets/mobile/_events-list.scss
+++ b/app/assets/stylesheets/mobile/_events-list.scss
@@ -47,6 +47,11 @@
     top: -4px;
     left: 0;
   }
+
+  span {
+    font-size: 10px;
+    margin-bottom: -3px;
+  }
 }
 
 .active .events-list__item-date {
