competition index, show, fonts, cache

--- a/app/assets/stylesheets/mobile/_header.scss
+++ b/app/assets/stylesheets/mobile/_header.scss
@@ -22,7 +22,7 @@
 
 .header__home {
   color: #fff;
-  font-size: 25px;
+  font: 25px $pn-light;
   letter-spacing: .05em;
   text-transform: uppercase;
   text-decoration: none;
