--- a/app/views/events/index.html+mobile.haml
+++ b/app/views/events/index.html+mobile.haml
@@ -1,10 +1,11 @@
-.page-wrap
-  .page-title
-    = t('application.header.competitions')
-  .events-list
-    - @events.each do |list_item|
-      = render list_item.event
+- cache ['mobile', I18n.locale, current_user, @events] do
+  .page-wrap
+    .page-title
+      = t('application.header.competitions')
+    .events-list
+      - @events.each do |list_item|
+        = render list_item.event
 
-  .text-center.top-buffer
-    .pagination-list
-      = will_paginate @events, renderer: BootstrapPagination::Rails
+    .text-center.top-buffer
+      .pagination-list
+        = will_paginate @events, renderer: BootstrapPagination::Rails
