--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,7 @@
 
 @import 'variables';
 @import './mixins/**/*';
+@import './fonts/**/*';
 @import './*';
 @import './common/**/*';
 @import './blocks/**/*';
