Flight profiles in Places
* make flight profile reusable
* add flight profiles to places

--- a/app/assets/stylesheets/_flight_profiles.scss
+++ b/app/assets/stylesheets/_flight_profiles.scss
@@ -30,6 +30,7 @@
 .flight-profiles__chart-container {
   height: 100%;
   width: 70%;
+  background-color: white;
 }
 
 .flight-profiles__tracks-list {
