--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -17,8 +17,8 @@
       %thead
         %th
         %th #
-        %th= t 'activerecord.attributes.profiles.name'
-        %th= t 'activerecord.attributes.profiles.country'
+        %th= t 'activerecord.attributes.profile.name'
+        %th= t 'activerecord.attributes.profile.country'
         %th
         %th
         %th
