--- a/app/views/flight_profiles/_tracks.html.haml
+++ b/app/views/flight_profiles/_tracks.html.haml
@@ -1,5 +1,5 @@
 %ul.flight-profiles__tracks-list
-  - @profile.base_tracks.accessible_by(current_user).each do |track|
+  - @scope.tracks.base.accessible_by(current_user).each do |track|
     %li.flight-profiles__track{data: { controller: 'flight-profiles--track', 'track-id': track.id } }
       .checkbox
         %label
@@ -10,6 +10,8 @@
             %span
               = track.recorded_at&.strftime('%d.%m.%Y')
           %div
+            - unless @scope.is_a? Profile
+              %div= track_pilot_name(track)
             %i.fa.fa-map-marker
             = track_place(track)
             &nbsp;
