--- a/app/assets/stylesheets/_flight_profiles.scss
+++ b/app/assets/stylesheets/_flight_profiles.scss
@@ -1,9 +1,37 @@
 .flight-profiles {
   @include full-screen-container;
+  flex-direction: column;
+}
+
+.flight-profiles__header {
+  background: white;
+  border-bottom: rgba(0, 0, 0, 0.14) solid 1px;
+  line-height: 2;
+  font-size: 24px;
+  padding-left: 15px;
+  color: $gray-dark;
+
+  a {
+    color: $light-text-color;
+    margin-right: 5px;
+    padding: 3px;
+
+    &:hover {
+      text-decoration: none;
+      background-color: #f3f3f3;
+      border-radius: 4px;
+    }
+
+    i { color: $gray-dark; }
+  }
+}
+
+.flight-profiles__body {
+  display: flex;
+  flex-basis: 100%;
 }
 
 .flight-profiles__sidebar {
-  height: 100%;
   width: 30%;
   padding-bottom: 55px;
   position: relative;
@@ -28,7 +56,6 @@
 }
 
 .flight-profiles__chart-container {
-  height: 100%;
   width: 70%;
   background-color: white;
 }
