add link to flight profiles to places

--- a/app/views/flight_profiles/show.html.haml
+++ b/app/views/flight_profiles/show.html.haml
@@ -4,7 +4,8 @@
       %i.fa.fa-chevron-left
       = @scope.name
 
-    \// Flight profiles
+    \//
+    = t('flight_profiles')
   .flight-profiles__body
     .flight-profiles__sidebar
       .flight-profiles__tracks-container
