--- a/app/views/profiles/_header.html.haml
+++ b/app/views/profiles/_header.html.haml
@@ -21,13 +21,12 @@
     %ul.tabs-navbar__menu
       %li.tabs-navbar__menuitem{class: ('tabs-navbar--active' if controller_path == 'profiles')}
         = link_to t('general.overview'), profile
-         
 
       %li.tabs-navbar__menuitem{class: ('tabs-navbar--active' if controller_path == 'profiles/tracks')}
         = link_to t('.tracks'), profile_tracks_path(profile)
 
       %li.tabs-navbar__menuitem{class: ('tabs-navbar--active' if controller_path == 'profiles/flight_profiles')}
-        = link_to t('.flight_profiles'), profile_flight_profiles_path(profile)
+        = link_to t('flight_profiles'), profile_flight_profiles_path(profile)
 
   .profile-commands
     - if policy(@profile).edit?
@@ -51,6 +50,3 @@
     - if policy(@profile).merge?
       = link_to new_profile_merge_path(@profile), remote: true, class: 'btn-flat' do
         Merge
-
-
-
