--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -24,8 +24,9 @@
         %li.tabs-navbar__menuitem{class: 'tabs-navbar--active'}
           = link_to t('general.overview'), @place
 
-        %li.tabs-navbar__menuitem
-          = link_to t('flight_profiles'), place_flight_profiles_path(@place)
+        - if @place.base?
+          %li.tabs-navbar__menuitem
+            = link_to t('flight_profiles'), place_flight_profiles_path(@place)
 
   .content-block
     - pilots = @place.pilots_accessible_by(current_user)
